DLP.UO232346/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : l_dec_globales

   2  l_dec_globales :
   3                 | l_dec_globales dec_global

   4  l_dec_locales :
   5                | l_dec_locales dec_local

   6  dec_global : VAR IDENT ':' tipo ';'
   7             | STRUCT IDENT '{' l_dec_struct '}' ';'
   8             | IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'

   9  l_dec_struct : IDENT ':' tipo ';'
  10               | l_dec_struct IDENT ':' tipo ';'

  11  dec_local : VAR IDENT ':' tipo ';'

  12  signatura :
  13            | l_parametros

  14  l_parametros : parametro
  15               | l_parametros ',' parametro

  16  parametro : IDENT ':' tipo

  17  l_sentencias :
  18               | l_sentencias sentencia

  19  sentencia : expresion '=' expresion ';'
  20            | IDENT '(' argumentos ')' ';'
  21            | PRINT expresion ';'
  22            | PRINTSP expresion ';'
  23            | PRINTLN expresion ';'
  24            | PRINTLN ';'
  25            | READ expresion ';'
  26            | WHILE '(' expresion ')' '{' l_sentencias '}'
  27            | IF '(' expresion ')' '{' l_sentencias '}'
  28            | IF '(' expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'
  29            | RETURN expresion ';'
  30            | RETURN ';'

  31  expresion : expresion '+' expresion
  32            | expresion '*' expresion
  33            | expresion '-' expresion
  34            | expresion '/' expresion
  35            | expresion AND expresion
  36            | expresion OR expresion
  37            | NOT expresion
  38            | expresion '<' expresion
  39            | expresion '>' expresion
  40            | expresion IGUAL expresion
  41            | expresion MAYORIGUAL expresion
  42            | expresion MENORIGUAL expresion
  43            | expresion DISTINTO expresion
  44            | expresion '.' IDENT
  45            | expresion '[' expresion ']'
  46            | '(' expresion ')'
  47            | IDENT '(' argumentos ')'
  48            | CAST '<' tipo '>' '(' expresion ')'
  49            | IDENT
  50            | LIT_INT
  51            | LIT_FLOAT
  52            | LIT_CHAR

  53  argumentos :
  54             | l_argumentos

  55  l_argumentos : expresion
  56               | l_argumentos ',' expresion

  57  tipo_retorno :
  58               | ':' tipo

  59  tipo : IDENT
  60       | '[' LIT_INT ']' tipo
  61       | INT
  62       | FLOAT
  63       | CHAR

state 0
	$accept : . programa $end  (0)
	l_dec_globales : .  (2)

	.  reduce 2

	programa  goto 1
	l_dec_globales  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : l_dec_globales .  (1)
	l_dec_globales : l_dec_globales . dec_global  (3)

	VAR  shift 3
	STRUCT  shift 4
	IDENT  shift 5
	$end  reduce 1

	dec_global  goto 6


state 3
	dec_global : VAR . IDENT ':' tipo ';'  (6)

	IDENT  shift 7
	.  error


state 4
	dec_global : STRUCT . IDENT '{' l_dec_struct '}' ';'  (7)

	IDENT  shift 8
	.  error


state 5
	dec_global : IDENT . '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)

	'('  shift 9
	.  error


state 6
	l_dec_globales : l_dec_globales dec_global .  (3)

	.  reduce 3


state 7
	dec_global : VAR IDENT . ':' tipo ';'  (6)

	':'  shift 10
	.  error


state 8
	dec_global : STRUCT IDENT . '{' l_dec_struct '}' ';'  (7)

	'{'  shift 11
	.  error


state 9
	dec_global : IDENT '(' . signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)
	signatura : .  (12)

	IDENT  shift 12
	')'  reduce 12

	signatura  goto 13
	l_parametros  goto 14
	parametro  goto 15


state 10
	dec_global : VAR IDENT ':' . tipo ';'  (6)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21


state 11
	dec_global : STRUCT IDENT '{' . l_dec_struct '}' ';'  (7)

	IDENT  shift 22
	.  error

	l_dec_struct  goto 23


state 12
	parametro : IDENT . ':' tipo  (16)

	':'  shift 24
	.  error


state 13
	dec_global : IDENT '(' signatura . ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)

	')'  shift 25
	.  error


state 14
	signatura : l_parametros .  (13)
	l_parametros : l_parametros . ',' parametro  (15)

	','  shift 26
	')'  reduce 13


state 15
	l_parametros : parametro .  (14)

	.  reduce 14


state 16
	tipo : INT .  (61)

	.  reduce 61


state 17
	tipo : FLOAT .  (62)

	.  reduce 62


state 18
	tipo : CHAR .  (63)

	.  reduce 63


state 19
	tipo : IDENT .  (59)

	.  reduce 59


state 20
	tipo : '[' . LIT_INT ']' tipo  (60)

	LIT_INT  shift 27
	.  error


state 21
	dec_global : VAR IDENT ':' tipo . ';'  (6)

	';'  shift 28
	.  error


state 22
	l_dec_struct : IDENT . ':' tipo ';'  (9)

	':'  shift 29
	.  error


state 23
	dec_global : STRUCT IDENT '{' l_dec_struct . '}' ';'  (7)
	l_dec_struct : l_dec_struct . IDENT ':' tipo ';'  (10)

	IDENT  shift 30
	'}'  shift 31
	.  error


state 24
	parametro : IDENT ':' . tipo  (16)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 32


state 25
	dec_global : IDENT '(' signatura ')' . tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)
	tipo_retorno : .  (57)

	':'  shift 33
	'{'  reduce 57

	tipo_retorno  goto 34


state 26
	l_parametros : l_parametros ',' . parametro  (15)

	IDENT  shift 12
	.  error

	parametro  goto 35


state 27
	tipo : '[' LIT_INT . ']' tipo  (60)

	']'  shift 36
	.  error


state 28
	dec_global : VAR IDENT ':' tipo ';' .  (6)

	.  reduce 6


state 29
	l_dec_struct : IDENT ':' . tipo ';'  (9)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 37


state 30
	l_dec_struct : l_dec_struct IDENT . ':' tipo ';'  (10)

	':'  shift 38
	.  error


state 31
	dec_global : STRUCT IDENT '{' l_dec_struct '}' . ';'  (7)

	';'  shift 39
	.  error


state 32
	parametro : IDENT ':' tipo .  (16)

	.  reduce 16


state 33
	tipo_retorno : ':' . tipo  (58)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 40


state 34
	dec_global : IDENT '(' signatura ')' tipo_retorno . '{' l_dec_locales l_sentencias '}'  (8)

	'{'  shift 41
	.  error


state 35
	l_parametros : l_parametros ',' parametro .  (15)

	.  reduce 15


state 36
	tipo : '[' LIT_INT ']' . tipo  (60)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 42


state 37
	l_dec_struct : IDENT ':' tipo . ';'  (9)

	';'  shift 43
	.  error


state 38
	l_dec_struct : l_dec_struct IDENT ':' . tipo ';'  (10)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 44


state 39
	dec_global : STRUCT IDENT '{' l_dec_struct '}' ';' .  (7)

	.  reduce 7


state 40
	tipo_retorno : ':' tipo .  (58)

	.  reduce 58


state 41
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' . l_dec_locales l_sentencias '}'  (8)
	l_dec_locales : .  (4)

	.  reduce 4

	l_dec_locales  goto 45


state 42
	tipo : '[' LIT_INT ']' tipo .  (60)

	.  reduce 60


state 43
	l_dec_struct : IDENT ':' tipo ';' .  (9)

	.  reduce 9


state 44
	l_dec_struct : l_dec_struct IDENT ':' tipo . ';'  (10)

	';'  shift 46
	.  error


state 45
	l_dec_locales : l_dec_locales . dec_local  (5)
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales . l_sentencias '}'  (8)
	l_sentencias : .  (17)

	VAR  shift 47
	PRINT  reduce 17
	PRINTSP  reduce 17
	PRINTLN  reduce 17
	READ  reduce 17
	CAST  reduce 17
	IF  reduce 17
	WHILE  reduce 17
	RETURN  reduce 17
	LIT_INT  reduce 17
	LIT_FLOAT  reduce 17
	LIT_CHAR  reduce 17
	IDENT  reduce 17
	NOT  reduce 17
	'('  reduce 17
	'}'  reduce 17

	dec_local  goto 48
	l_sentencias  goto 49


state 46
	l_dec_struct : l_dec_struct IDENT ':' tipo ';' .  (10)

	.  reduce 10


state 47
	dec_local : VAR . IDENT ':' tipo ';'  (11)

	IDENT  shift 50
	.  error


state 48
	l_dec_locales : l_dec_locales dec_local .  (5)

	.  reduce 5


state 49
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias . '}'  (8)
	l_sentencias : l_sentencias . sentencia  (18)

	PRINT  shift 51
	PRINTSP  shift 52
	PRINTLN  shift 53
	READ  shift 54
	CAST  shift 55
	IF  shift 56
	WHILE  shift 57
	RETURN  shift 58
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 62
	NOT  shift 63
	'('  shift 64
	'}'  shift 65
	.  error

	sentencia  goto 66
	expresion  goto 67


state 50
	dec_local : VAR IDENT . ':' tipo ';'  (11)

	':'  shift 68
	.  error


state 51
	sentencia : PRINT . expresion ';'  (21)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 70


state 52
	sentencia : PRINTSP . expresion ';'  (22)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 71


state 53
	sentencia : PRINTLN . expresion ';'  (23)
	sentencia : PRINTLN . ';'  (24)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	';'  shift 72
	.  error

	expresion  goto 73


state 54
	sentencia : READ . expresion ';'  (25)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 74


state 55
	expresion : CAST . '<' tipo '>' '(' expresion ')'  (48)

	'<'  shift 75
	.  error


state 56
	sentencia : IF . '(' expresion ')' '{' l_sentencias '}'  (27)
	sentencia : IF . '(' expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'  (28)

	'('  shift 76
	.  error


state 57
	sentencia : WHILE . '(' expresion ')' '{' l_sentencias '}'  (26)

	'('  shift 77
	.  error


state 58
	sentencia : RETURN . expresion ';'  (29)
	sentencia : RETURN . ';'  (30)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	';'  shift 78
	.  error

	expresion  goto 79


state 59
	expresion : LIT_INT .  (50)

	.  reduce 50


state 60
	expresion : LIT_FLOAT .  (51)

	.  reduce 51


state 61
	expresion : LIT_CHAR .  (52)

	.  reduce 52


state 62
	sentencia : IDENT . '(' argumentos ')' ';'  (20)
	expresion : IDENT . '(' argumentos ')'  (47)
	expresion : IDENT .  (49)

	'('  shift 80
	IGUAL  reduce 49
	MAYORIGUAL  reduce 49
	MENORIGUAL  reduce 49
	DISTINTO  reduce 49
	AND  reduce 49
	OR  reduce 49
	'='  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'['  reduce 49
	'.'  reduce 49


state 63
	expresion : NOT . expresion  (37)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 81


state 64
	expresion : '(' . expresion ')'  (46)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 82


state 65
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}' .  (8)

	.  reduce 8


state 66
	l_sentencias : l_sentencias sentencia .  (18)

	.  reduce 18


state 67
	sentencia : expresion . '=' expresion ';'  (19)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'='  shift 89
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	.  error


state 68
	dec_local : VAR IDENT ':' . tipo ';'  (11)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 98


state 69
	expresion : IDENT . '(' argumentos ')'  (47)
	expresion : IDENT .  (49)

	'('  shift 99
	IGUAL  reduce 49
	MAYORIGUAL  reduce 49
	MENORIGUAL  reduce 49
	DISTINTO  reduce 49
	AND  reduce 49
	OR  reduce 49
	'='  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'['  reduce 49
	']'  reduce 49
	'.'  reduce 49
	')'  reduce 49
	';'  reduce 49
	','  reduce 49


state 70
	sentencia : PRINT expresion . ';'  (21)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 100
	.  error


state 71
	sentencia : PRINTSP expresion . ';'  (22)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 101
	.  error


state 72
	sentencia : PRINTLN ';' .  (24)

	.  reduce 24


state 73
	sentencia : PRINTLN expresion . ';'  (23)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 102
	.  error


state 74
	sentencia : READ expresion . ';'  (25)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 103
	.  error


state 75
	expresion : CAST '<' . tipo '>' '(' expresion ')'  (48)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 104


state 76
	sentencia : IF '(' . expresion ')' '{' l_sentencias '}'  (27)
	sentencia : IF '(' . expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'  (28)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 105


state 77
	sentencia : WHILE '(' . expresion ')' '{' l_sentencias '}'  (26)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 106


state 78
	sentencia : RETURN ';' .  (30)

	.  reduce 30


state 79
	sentencia : RETURN expresion . ';'  (29)
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	AND  shift 87
	OR  shift 88
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 107
	.  error


state 80
	sentencia : IDENT '(' . argumentos ')' ';'  (20)
	expresion : IDENT '(' . argumentos ')'  (47)
	argumentos : .  (53)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 69
	NOT  shift 63
	'('  shift 64
	')'  reduce 53

	expresion  goto 108
	argumentos  goto 109
	l_argumentos  goto 110


state 81
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : NOT expresion .  (37)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
	expresion : expresion . DISTINTO expresion  (43)
	expresion : expresion . '.' IDENT  (44)
	expresion : expresion . '[' expresion ']'  (45)

	IGUAL  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	DISTINTO  shift 86
	'>'  shift 90
	'<'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'['  shift 96
	'.'  shift 97
	AND  reduce 37
	OR  reduce 37
	'='  reduce 37
	']'  reduce 37
	')'  reduce 37
	';'  reduce 37
	','  reduce 37


state 82
	expresion : expresion . '+' expresion  (31)
	expresion : expresion . '*' expresion  (32)
	expresion : expresion . '-' expresion  (33)
	expresion : expresion . '/' expresion  (34)
	expresion : expresion . AND expresion  (35)
	expresion : expresion . OR expresion  (36)
	expresion : expresion . '<' expresion  (38)
	expresion : expresion . '>' expresion  (39)
	expresion : expresion . IGUAL expresion  (40)
	expresion : expresion . MAYORIGUAL expresion  (41)
	expresion : expresion . MENORIGUAL expresion  (42)
